syntax = "proto3";

package ping;

option java_multiple_files = true;
option java_package = "com.github.jianlu8023.javastudy.rpc.grpc.proto.ping";
option java_outer_classname = "PingProto";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;


message PingRequest{
  string fromUid = 1;
  string toUid = 2;
  string message = 3;
  string exception = 4;
}

message PongResponse{
  string fromUid = 1;
  string toUid = 2;
  string message = 3;
  string  exception = 4;
}

service PingService{
  rpc ping(PingRequest) returns (PongResponse){}
}


